# otus-roman

./: README.md
Lession 1-2/: README.md  Vagrantfile
Lession 10/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  Vagrantfile  cat.sh  readme.md
Lession 10/scripts/: 3.sh  7.sh
Lession 11/: readme.md  test.sh
Lession 12/: readme.md
Lession 13/provisioning/provisioning/: inventory.ini
Lession 13_1/: readme.md
Lession 13_2/: readme.md
Lession 14/: readme.md
Lession 15/: readme.md
Lession 16/: Vagrantfile  check_weekend.sh  readme.md
Lession 17/: 2.yaml  Vagrantfile  readme.md  site.yaml
Lession 3/: Vagrantfile  inventory.ini  playbook.yml  readme.md  vault
Lession 3/files/: index.html.j2  nginx.conf.j2
Lession 4/: Vagrantfile  mdadm.conf  readme.md
Lession 5/: fstab  readme.md
Lession 6/: Vagrantfile  readme.md
Lession 7/: readme.md
Lession 8/: CMakeLists.txt  Calculator.cpp  Calculator.h  Vagrantfile  main.cpp  readme.md
Lession 8/core/: Calculator.cpp  calculator.spec  main.cpp
Lession 9/: readme.md
